# design_pattern

./: .gitignore  CMakeLists.txt  README.md
1.面向对象/: 1.OOP概述.md  2.面向对象四大特性.md  255.总结.md  3.面向对象VS面向过程.md  4.接口VS抽象类.md  5.基于接口而非实现编程.md  6.组合VS继承.md
2.设计原则/: 1.单一职责原则.md  2.开闭原则.md  255.总结.md  3.里式替换原则.md  4.接口隔离原则.md  5.依赖反转原则.md  6.KISS，YAGNI.md  7.DRY 原则.md  8.迪米特法则.md
3.规范与重构/: 1.重构概述.md  2.单元测试.md  255.总结.md  3.代码的可测试性.md  4.大型重构：解耦.md  5.小型重构：编码规范.md  6.代码质量.md
4.创建型/: 1.1 单例使用.md  1.单例模式.md  2.工厂模式.md  3.建造者模式.md  4.原型模式.md
5.结构型/: 10.组合模式.md  11.享元模式.md  5.代理模式.md  6.桥接模式.md  7.装饰器模式.md  8.适配器模式.md  9.外观模式.md
6.行为型/: 12.观察者模式.md  13.模板模式.md  14.策略模式.md  15.职责链模式.md  16.状态模式.md  17.迭代器模式.md  18.访问者模式.md  19.备忘录模式.md  20.命令模式.md  21.解释器模式.md  22.中介模式.md
7.总结/: 1.创建型设计模式.md  2.结构型设计模式.md  3.行为型设计模式.md  4.避免过度设计.md
behavior_pattern/: CMakeLists.txt  README.md
behavior_pattern/13_template/: CMakeLists.txt  README.md  main.cpp  template.cpp  template.h
behavior_pattern/14_strategy/: CMakeLists.txt  README.md  main.cpp  strategy.cpp  strategy.h
behavior_pattern/15_command/: CMakeLists.txt  README.md  command.cpp  command.h  main.cpp
behavior_pattern/16_chain_of_responsibility/: CMakeLists.txt  README.md  main.cpp  responsibility.cpp  responsibility.h
behavior_pattern/17_state/: CMakeLists.txt  README.md  main.cpp  state.cpp  state.h
behavior_pattern/18_observer/: CMakeLists.txt  README.md  main.cpp  observer.cpp  observer.h
behavior_pattern/19_mediator/: CMakeLists.txt  DatingPlatform.java  README.md  main.cpp  mediator.cpp  mediator.h
behavior_pattern/20_iterator/: CMakeLists.txt  README.md  iterator.cpp  iterator.h  main.cpp
behavior_pattern/21_visitor/: CMakeLists.txt  README.md  main.cpp  visitor.cpp  visitor.h
behavior_pattern/22_memento/: CMakeLists.txt  README.md  main.cpp  memento.cpp  memento.h
behavior_pattern/23_interpreter/: CMakeLists.txt  README.md  interpreter.cpp  interpreter.h  main.cpp
code/: CMakeLists.txt
code/Cpp/: 01_singleton.cpp  02.1_abstract_factory.cpp  02_factory_method.cpp  03_build.cpp  04_prototype.cpp  05_proxy.cpp  06_bridge.cpp  07_decorator.cpp  08_adapter.cpp  09_facade.cpp  10_composite.cpp  11_fly_weight.cpp  12_observer.cpp  13_template.cpp  14_strategy.cpp  15_chain_of_responsibility.cpp  16_state.cpp  17_iterator.cpp  18_visitor.cpp  19_memento.cpp  20_command.cpp  21_interpreter.cpp  22_mediator.cpp  CMakeLists.txt
code/Python/: 01_singleton.py  02.1_abstract_factory.py  02_factory_method.py  03_build.py  04_prototype.py  05_proxy.py  06_bridge.py  07_decorator.py  08_adapter.py  09_facade.py  10_composite.py  11_fly_weight.py  12_observer.py  13_template.py  14_strategy.py  15_chain_of_responsibility.py  16_state.py  17_iterator.py  18_visitor.py  19_memento.py  20_command.py  21_interpreter.py  22_mediator.py
create_pattern/: CMakeLists.txt  README.md
create_pattern/01_singleton/: CMakeLists.txt  README.md  main.cpp  singleton.cpp  singleton.h
create_pattern/02_prototype/: CMakeLists.txt  README.md  main.cpp  prototype.cpp  prototype.h
create_pattern/03_factory/: CMakeLists.txt  README.md  factory.cpp  factory.h  main.cpp
create_pattern/04_abstract_factory/: CMakeLists.txt  README.md  abstract_factory.cpp  abstract_factory.h  main.cpp  product.h
create_pattern/05_builder/: CMakeLists.txt  README.md  builder.cpp  builder.h  main.cpp
design_principle/: CRP.md  DIP.md  ISP.md  LOD.md  LSP.md  OCP.md  SRP.md
struct_pattern/: CMakeLists.txt  README.md
struct_pattern/06_proxy/: CMakeLists.txt  README.md  main.cpp  proxy.cpp  proxy.h
struct_pattern/07_adapter/: CMakeLists.txt  README.md  adapter.cpp  adapter.h  main.cpp
struct_pattern/08_bridge/: CMakeLists.txt  README.md  bridge.cpp  bridge.h  main.cpp
struct_pattern/09_decorator/: CMakeLists.txt  README.md  decorator.cpp  decorator.h  main.cpp
struct_pattern/10_facade/: CMakeLists.txt  README.md  facade.cpp  facade.h  main.cpp
struct_pattern/11_fly_weight/: CMakeLists.txt  README.md  fly_weight.cpp  fly_weight.h  main.cpp
struct_pattern/12_composite/: CMakeLists.txt  README.md  composite.cpp  composite.h  main.cpp
